third_party/move/move-compiler-v2/tests/folding/constants_quoted_string.move
address 0x42 {
module M {
    fun u(): u64 { 0 }

    const C12: vector<u8> = "<empty>";
    const C13: vector<u8> = "foo;
}
}
